--- a/app/find.html
+++ b/app/find.html
@@ -35,70 +35,72 @@
 
 		<div class="main-finding">
 			<h2>Pilot: <span class="pilot-name">Zippy</span>
-				<hr>
 				<div>
-					<ul class="host-list">
-						<li>
-							<span class="host-info">[Team] Majestic Echo</span>
-							<button class="btn btn-med btn-info pull-right">
+					<table class="host-list table">
+						<tr>
+							<td class="host-info">[Team] <span class="team-name">Majestic Echo</span></td>
+							<td><a class="btn btn-med btn-info pull-right">
 								JOIN
-							</button>
-						</li>
-						<li>
-							<span class="host-info">[Team] Emerald Wind</span>
-							<button class="btn btn-med btn-info pull-right">
-								JOIN
-							</button>
-						</li>
-					</div>
-					<hr>
-					<div class="main-find-buttons">
-						<div>
-							<a href="main.html">
-								<button class="btn btn-lg btn-danger">Go Home</button>
 							</a>
-						</div>
+						</td>
+					</tr>
+					<tr>
+						<td class="host-info">[Team] <span class="team-name">Emerald Wind</span></td>
+						<td >
+							<a class="btn btn-med btn-info pull-right">
+								JOIN
+							</a>
+						</td>
+					</tr>
+				</table>
+				<div class="main-find-buttons">
+					<hr>
+					<div>
+						<a href="main.html">
+							<button class="btn btn-lg btn-danger">Go Home</button>
+						</a>
 					</div>
 				</div>
 			</div>
+		</div>
 
 
 
-			<!-- build:js(.) scripts/vendor.js -->
-			<!-- bower:js -->
-			<script src="/bower_components/jquery/dist/jquery.js"></script>
-			<!-- endbower -->
-			<!-- endbuild -->
+		<!-- build:js(.) scripts/vendor.js -->
+		<!-- bower:js -->
+		<script src="/bower_components/jquery/dist/jquery.js"></script>
+		<!-- endbower -->
+		<!-- endbuild -->
 
 
-			<!-- build:js(.) scripts/plugins.js -->
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-			<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
-			<!-- endbuild -->
+		<!-- build:js(.) scripts/plugins.js -->
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
+		<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
+		<!-- endbuild -->
 
 
-			<!-- build:js scripts/main.js -->
-			<script src="scripts/main.js"></script>
-			<!-- endbuild -->
+		<!-- build:js scripts/main.js -->
+		<script src="scripts/main.js"></script>
+		<!-- endbuild -->
 
-			<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-			<script>
-			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-				function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-			e.src='https://www.google-analytics.com/analytics.js';
-			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-			ga('create','UA-XXXXX-X');ga('send','pageview');
-			</script>
-		</body>
-		</html>
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+		<script>
+		(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+			function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+		e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+		e.src='https://www.google-analytics.com/analytics.js';
+		r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+		ga('create','UA-XXXXX-X');ga('send','pageview');
+		</script>
+	</body>
+	</html>
